@@ -44,36 +44,33 @@ requirements for the available tasks.
 
 Some tasks may be pre-selected based on the characteristics of the
 computer you are installing. If you disagree with these selections you can
-un-select the tasks. You can even opt to install no tasks at all at this point.
+deselect them. You can even opt to install no tasks at all at this point.
 
 </para>
 <note><para>
 
 <!-- TODO: Explain the "Standard system" task first -->
 
-The <quote>Desktop environment</quote> task will install the GNOME desktop
-environment. The options offered by the installer currently do not allow to
-select a different desktop environment such as for example KDE.
+Unless you are using the special KDE or Xfce CDs, the <quote>Desktop
+environment</quote> task will install the GNOME desktop environment.
 
 </para><para>
 
-It is possible to get the installer to install KDE by using preseeding
-(see <xref linkend="preseed-pkgsel"/>) or by adding
-<literal>tasks="standard, kde-desktop"</literal> at the boot prompt
-when starting the installer<footnote>
+It is not possible to interactively select a different desktop during
+the installation. However, it <emphasis>is</emphasis> possible to get &d-i;
+to install a KDE desktop environment instead of GNOME by using preseeding
+(see <xref linkend="preseed-pkgsel"/>) or by adding the parameter
+<literal>desktop=kde</literal> at the boot prompt when starting the
+installer. Alternatively the more lightweight Xfce desktop environment can
+be selected by using <literal>desktop=xfce</literal>.
 
-<para>
-A more lightweight Xfce desktop environment can be selected by using
-<literal>xfce-desktop</literal> instead of <literal>kde-desktop</literal>.
-If you are installing on a laptop, you could also add
-<literal>laptop</literal> to the tasks to be installed.
-</para>
+</para><para>
 
-</footnote>. However, this will only work if the packages
-needed for KDE are actually available. If you are installing using a full
-CD image, they will need to be downloaded from a mirror as KDE packages are
-not included on the first full CD; installing KDE this way should work fine
-if you are using a DVD image or any other installation method.
+Note that this will only work if the packages needed for KDE or Xfce
+are actually available. If you are installing using a single full CD image,
+they will need to be downloaded from a mirror as most needed packages are
+only included on later CDs; installing KDE or Xfce this way should work
+fine if you are using a DVD image or any other installation method.
 
 </para><para>
 
