@@ -18,8 +18,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
     mirror in line with that.
   * Lenny will be version 5.0.
   * Warn about boot issues when using RAID on the root file system.
+  * Update task selection section for changes in desktop task preseeding.
 
- -- Frans Pop <fjp@debian.org>  Fri, 14 Mar 2008 10:01:49 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 22 Mar 2008 14:14:07 +0100
 
 installation-guide (20080211) unstable; urgency=low
 
